
3.62  2012-11-26
  - Improved compatibility with IO::Socket::SSL 1.79.
  - Improved tests.
  - Fixed clone bugs in Mojo::URL.

3.61  2012-11-25
  - Added protocol method to Mojo::URL.
  - Added charset attribute to Mojo::Path.
  - Improved support for relative redirects in Mojo::UserAgent::Transactor.
  - Improved documentation.
  - Improved tests.
  - Fixed clone bugs in Mojo::Parameters and Mojo::URL.
  - Fixed case sensitivity bugs in Mojo::UserAgent::Transactor.

3.60  2012-11-22
  - Added unexpected event to Mojo::Transaction::HTTP.
  - Improved documentation.
  - Improved tests.
  - Fixed Mojo::UserAgent to ignore unexpected 1xx responses.

3.59  2012-11-20
  - Improved tests.
  - Fixed memory leak in Mojo::Message::Request.
  - Fixed keep alive bug in Mojo::Server::Daemon.

3.58  2012-11-19
  - Improved documentation.
  - Improved tests.
  - Fixed state bugs in Mojo::Content::MultiPart.
  - Fixed Mojo::UserAgent to remove codes from parser errors.

3.57  2012-11-12
  - Deprecated Mojo::Exception->raw_message.
  - Improved error message accuracy in Mojo::Template by using line
    directives.
  - Improved performance of contains method in Mojo::Asset::File by 100%.
  - Improved documentation.
  - Improved tests.
  - Fixed range bug in Mojo::Asset::Memory.

3.56  2012-11-09
  - Improved performance of contains method in Mojo::Asset::File
    significantly.
  - Improved documentation.
  - Improved tests.
  - Fixed offset bug in Mojo::Asset::File.

3.55  2012-11-08
  - Added gzip compression support to Mojo::UserAgent.
  - Added is_compressed method to Mojo::Content.
  - Improved documentation.
  - Improved tests.
  - Fixed bug that prevented around_dispatch hooks from working correctly in
    embedded applications.
  - Fixed small bug where "chunked" would not always be the default transfer
    encoding.

3.54  2012-11-01
  - Added next and previous methods to Mojo::DOM.
  - Improved documentation.
  - Improved tests.

3.53  2012-10-31